	PR gold/12893 	* resolve.cc (Symbol_table::resolve): Don't give an error if a 	symbol is redefined with the exact same object and value.